--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fastcms/webpack-config",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": false,
   "description": "Shared @webpack config for web development projects of @fastcms.",
   "keywords": [
@@ -114,7 +114,7 @@
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.1",
     "@types/react": "^17.0.30",
-    "@types/react-dom": "^17.0.9",
+    "@types/react-dom": "^17.0.10",
     "@types/webpack-env": "^1.16.2",
     "commitizen": "^4.2.4",
     "core-js": "^3.18.3",
@@ -141,5 +141,13 @@
   "optionalDependencies": {
     "@swc/core": "^1.2.101",
     "esbuild": "^0.13.4"
+  },
+  "engines": {
+    "node": ">=16"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org",
+    "tag": "latest"
   }
 }
