--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@fastcms/webpack-config",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "private": false,
   "description": "Shared @webpack config for web development projects of @fastcms.",
   "keywords": [
     "bundler",
-    "easynm",
+    "fastcms",
     "webpack",
     "webpack-config"
   ],
