--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fastcms/webpack-config",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "private": false,
   "description": "Shared @webpack config for web development projects of @fastcms.",
   "keywords": [
@@ -73,6 +73,10 @@
       "!coverage/**",
       "!node_modules/**"
     ],
+    "extensionsToTreatAsEsm": [
+      ".ts",
+      ".tsx"
+    ],
     "roots": [
       "<rootDir>"
     ],
@@ -80,48 +84,49 @@
       "**/__tests__/**/*.[jt]s?(x)",
       "**/?(*.)+(spec|test).[jt]s?(x)"
     ],
+    "testPathIgnorePatterns": [
+      "/__files__/",
+      "/node_modules/"
+    ],
     "transform": {
       "^.+\\.[jt]sx?$": "@swc/jest"
     },
     "verbose": true
   },
   "dependencies": {
-    "babel-loader": "^8.2.2",
+    "babel-loader": "^8.2.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "css-loader": "^6.4.0",
     "css-minimizer-webpack-plugin": "^3.1.1",
     "dotenv-webpack": "^7.0.3",
     "esbuild-loader": "^2.16.0",
-    "exports-loader": "^3.0.0",
+    "exports-loader": "^3.1.0",
     "file-loader": "^6.2.0",
-    "mini-css-extract-plugin": "^2.4.2",
+    "mini-css-extract-plugin": "^2.4.3",
     "shader-loader": "^1.3.1",
-    "style-loader": "^3.3.0",
+    "style-loader": "^3.3.1",
     "swc-loader": "^0.1.15",
     "terser-webpack-plugin": "^5.2.4",
     "url-loader": "^4.1.1",
-    "webpack": "^5.58.1",
+    "webpack": "^5.59.1",
     "worker-loader": "^3.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
-    "@babel/runtime": "^7.15.4",
-    "@fastcms/babel-preset": "^1.1.1",
-    "@fastcms/eslint-config": "^1.7.5",
-    "@fastcms/stylelint-config": "^1.3.2",
-    "@swc/core": "^1.2.101",
+    "@fastcms/eslint-config": "^1.8.2",
+    "@fastcms/stylelint-config": "^1.4.1",
+    "@swc/core": "^1.2.102",
     "@swc/jest": "^0.2.5",
     "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.1",
-    "@types/react": "^17.0.30",
+    "@types/node": "^16.11.3",
+    "@types/react": "^17.0.31",
     "@types/react-dom": "^17.0.10",
-    "@types/webpack-env": "^1.16.2",
+    "@types/webpack-env": "^1.16.3",
     "commitizen": "^4.2.4",
-    "core-js": "^3.18.3",
     "cz-emoji": "^1.3.1",
-    "esbuild": "^0.13.4",
+    "esbuild": "^0.13.8",
     "eslint": "^7.32.0",
-    "husky": "^7.0.2",
+    "husky": "^7.0.4",
     "jest": "^27.3.1",
     "lint-staged": "^11.2.3",
     "npm-run-all": "^4.1.5",
@@ -130,17 +135,17 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rimraf": "^3.0.2",
-    "stylelint": "^13.13.1",
+    "stylelint": "^14.0.0",
     "typescript": "^4.4.4",
-    "webpack": "^5.58.1"
+    "webpack": "^5.59.1"
   },
   "peerDependencies": {
     "@babel/core": "^7.15.8",
-    "webpack": "^5.58.1"
+    "webpack": "^5.59.1"
   },
   "optionalDependencies": {
-    "@swc/core": "^1.2.101",
-    "esbuild": "^0.13.4"
+    "@swc/core": "^1.2.102",
+    "esbuild": "^0.13.8"
   },
   "engines": {
     "node": ">=16"
